--- a/fastchat-controller/templates/deployment.yaml
+++ b/fastchat-controller/templates/deployment.yaml
@@ -45,6 +45,10 @@ spec:
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
           {{- with .Values.volumeMounts }}
+          {{- with .Values.env }}
+          env:
+            {{- toYaml . | nindent 12 }}
+          {{- end }}
           volumeMounts:
             {{- toYaml . | nindent 12 }}
           {{- end }}
