feat: update model worker command.
Signed-off-by: SUGIYAMA Yoshio <nenegi.01mo@gmail.com>

--- a/fastchat-api-server/templates/deployment.yaml
+++ b/fastchat-api-server/templates/deployment.yaml
@@ -41,7 +41,7 @@ spec:
             - --port
             - {{ .Values.service.port }}
           ports:
-            - name: http
+            - name: fastchat-api-server
               containerPort: {{ .Values.service.port }}
               protocol: TCP
           resources:
