--- a/fastchat-model-worker/templates/service.yaml
+++ b/fastchat-model-worker/templates/service.yaml
@@ -8,8 +8,8 @@ spec:
   type: {{ .Values.service.type }}
   ports:
     - port: {{ .Values.service.port }}
-      targetPort: http
+      targetPort: {{ .Values.service.port }}
       protocol: TCP
-      name: http
+      name: fastchat-model-worker
   selector:
     {{- include "fastchat-model-worker.selectorLabels" . | nindent 4 }}
