--- a/fastchat-controller/values.yaml
+++ b/fastchat-controller/values.yaml
@@ -56,3 +56,11 @@ volumeMounts: []
 # - name: foo
 #   mountPath: "/etc/foo"
 #   readOnly: true
+
+env:
+  - name: HTTPS_PROXY
+    value: http://hpeproxy.its.hpecorp.net:8080/
+  - name: HTTP_PROXY
+    value: http://hpeproxy.its.hpecorp.net:8080/
+  - name: NO_PROXY
+    value: fastchat-controller,fastchat-model-worker,fastchat-api-server,localhost,127.0.0.1,ponkots01,127.0.1.1,16.171.32.68,10.0.0.0/8,192.168.0.0/16,172.16.0.0/16
