fix: amend type number to string.
Signed-off-by: SUGIYAMA Yoshio <nenegi.01mo@gmail.com>

--- a/fastchat-controller/templates/deployment.yaml
+++ b/fastchat-controller/templates/deployment.yaml
@@ -37,7 +37,7 @@ spec:
             - --host
             - 0.0.0.0
             - --port
-            - {{ .Values.service.port }}
+            - "{{ .Values.service.port }}"
           ports:
             - name: fastchat-controller
               containerPort: {{ .Values.service.port }}
