--- a/fastchat-api-server/templates/deployment.yaml
+++ b/fastchat-api-server/templates/deployment.yaml
@@ -39,7 +39,7 @@ spec:
             - --host
             - 0.0.0.0
             - --port
-            - {{ .Values.service.port }}
+            - "{{ .Values.service.port }}"
           ports:
             - name: fastchat-api-server
               containerPort: {{ .Values.service.port }}
