fix: apemd port name.
Signed-off-by: SUGIYAMA Yoshio <nenegi.01mo@gmail.com>

--- a/fastchat-controller/templates/deployment.yaml
+++ b/fastchat-controller/templates/deployment.yaml
@@ -39,7 +39,7 @@ spec:
             - --port
             - "{{ .Values.service.port }}"
           ports:
-            - name: fastchat-controller
+            - name: controller
               containerPort: {{ .Values.service.port }}
               protocol: TCP
           resources:
