--- a/fastchat-model-worker/templates/deployment.yaml
+++ b/fastchat-model-worker/templates/deployment.yaml
@@ -49,7 +49,7 @@ spec:
             - --num-gpus
             - "2"
           ports:
-            - name: fastchat-model-worker
+            - name: model-worker
               containerPort: {{ .Values.service.port }}
               protocol: TCP
           resources:
