fix: env variable is number to string
Signed-off-by: SUGIYAMA Yoshio <nenegi.01mo@gmail.com>

--- a/fastchat-api-server/values.yaml
+++ b/fastchat-api-server/values.yaml
@@ -59,7 +59,7 @@ volumeMounts: []
 
 env:
   - name: FASTCHAT_WORKER_API_TIMEOUT
-    value: 300
+    value: "300"
   - name: HTTPS_PROXY
     value: http://hpeproxy.its.hpecorp.net:8080/
   - name: HTTP_PROXY
