refactor: remove proxy setting
Signed-off-by: SUGIYAMA Yoshio <nenegi.01mo@gmail.com>

--- a/Dockerfile/Makefile
+++ b/Dockerfile/Makefile
@@ -8,7 +8,7 @@ IMAGE_TAG = 0.0.1
 
 .PHONY: build
 build: ## Build container image
-	docker build --build-arg PROXY=$(http_proxy) -t localhost:32000/fastchat:$(IMAGE_TAG) .
+	docker build -t localhost:32000/fastchat:$(IMAGE_TAG) .
 
 .PHONY: push
 push: ## Push container image to local registry
