--- a/Dockerfile/Dockerfile
+++ b/Dockerfile/Dockerfile
@@ -1,10 +1,5 @@
 FROM nvidia/cuda:12.3.2-base-ubuntu22.04
 
-ARG PROXY
-
-ENV http_proxy=$PROXY \
-    https_proxy=$PROXY
-
 ARG DEBIAN_FRONTEND=noninteractive
 
 RUN apt-get update
@@ -13,6 +8,6 @@ RUN apt-get install -y \
 
 RUN python3 -m pip install --no-cache-dir --upgrade pip setuptools
 
-RUN python3 -m pip install --no-cache-dir --upgrade fschat[model_worker]
+RUN python3 -m pip install --no-cache-dir --upgrade fschat[model_worker,webui]
 
 WORKDIR /app
