--- a/fastchat-web-server/values.yaml
+++ b/fastchat-web-server/values.yaml
@@ -1,4 +1,4 @@
-# Default values for fastchat-model-worker.
+# Default values for fastchat-web-server.
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
@@ -6,7 +6,7 @@ replicaCount: 1
 
 image:
   repository: localhost:32000/fastchat
-  pullPolicy: IfNotPresent
+  pullPolicy: Always
   # Overrides the image tag whose default is the chart appVersion.
   tag: ""
 
@@ -30,11 +30,25 @@ podLabels: {}
 
 service:
   type: ClusterIP
-  port: 21000
+  port: 7860
 
-resources:
-  limits:
-    nvidia.com/gpu: 2
+ingress:
+  enabled: true
+  className: nginx
+  annotations: {}
+    # kubernetes.io/ingress.class: nginx
+    # kubernetes.io/tls-acme: "true"
+  hosts:
+    - host: fastchat.ponkots01.imokuri.com
+      paths:
+        - path: /
+          pathType: ImplementationSpecific
+  tls: []
+  #  - secretName: chart-example-tls
+  #    hosts:
+  #      - chart-example.local
+
+resources: {}
   # We usually recommend not to specify default resources and to leave this as a conscious
   # choice for the user. This also increases chances charts run on environments with little
   # resources, such as Minikube. If you do want to specify resources, uncomment the following
@@ -47,20 +61,14 @@ resources:
   #   memory: 128Mi
 
 # Additional volumes on the output Deployment definition.
-volumes:
-  - name: xdg-cache-home
-    hostPath:
-      path: /data/home/sugiyama/.cache
+volumes: []
 # - name: foo
 #   secret:
 #     secretName: mysecret
 #     optional: false
 
 # Additional volumeMounts on the output Deployment definition.
-volumeMounts:
-  - name: xdg-cache-home
-    mountPath: /root/.cache
-    readOnly: false
+volumeMounts: []
 # - name: foo
 #   mountPath: "/etc/foo"
 #   readOnly: true
