--- a/fastchat-web-server/values.yaml
+++ b/fastchat-web-server/values.yaml
@@ -79,4 +79,4 @@ env:
   - name: HTTP_PROXY
     value: http://hpeproxy.its.hpecorp.net:8080/
   - name: NO_PROXY
-    value: fastchat-controller,fastchat-model-worker,fastchat-api-server,fastchat-web-server,localhost,127.0.0.1,ponkots01,127.0.1.1,16.171.32.68,10.0.0.0/8,192.168.0.0/16,172.16.0.0/16
+    value: fastchat-model-worker-vicuna-7b,fastchat-controller,fastchat-model-worker,fastchat-api-server,fastchat-web-server,localhost,127.0.0.1,ponkots01,127.0.1.1,16.171.32.68,10.0.0.0/8,192.168.0.0/16,172.16.0.0/16
