--- a/fastchat-model-worker/values.yaml
+++ b/fastchat-model-worker/values.yaml
@@ -54,7 +54,7 @@ resources:
 volumes:
   - name: xdg-cache-home
     hostPath:
-      path: /data/home/sugiyama/.cache
+      path: /home/sugi/.cache
 # - name: foo
 #   secret:
 #     secretName: mysecret
@@ -69,10 +69,4 @@ volumeMounts:
 #   mountPath: "/etc/foo"
 #   readOnly: true
 
-env:
-  - name: HTTPS_PROXY
-    value: http://hpeproxy.its.hpecorp.net:8080/
-  - name: HTTP_PROXY
-    value: http://hpeproxy.its.hpecorp.net:8080/
-  - name: NO_PROXY
-    value: fastchat-model-worker-vicuna-7b,fastchat-controller,fastchat-model-worker,fastchat-api-server,fastchat-web-server,localhost,127.0.0.1,ponkots01,127.0.1.1,16.171.32.68,10.0.0.0/8,192.168.0.0/16,172.16.0.0/16
+# env:
